lilv (0.18.1) unstable;

  * Don't load files multiple times if they are listed as rdfs:seeAlso for
    several plugins
  * Fix minor memory leak in test suite
  * Call lv2_lib_descriptor separately for different bundle paths
    (fix loading several dynamic plugins like Ingen at once)
  * Tolerate calling lilv_node_as_uri or lilv_node_as_blank on NULL

 -- David Robillard <d@drobilla.net>  Sat, 26 Apr 2014 20:29:27 -0400

lilv (0.18.0) stable;

  * Allow lilv_state_restore() to be used without passing an instance,
    for restoring port values via a callback only
  * Fix unlikely memory leak in lilv_plugin_instantiate()
  * Support denoting latency ports with lv2:designation lv2:latency
  * Allow passing NULL port_class to lilv_plugin_get_port_by_designation
  * Call GetProcAddress with correct calling convention on Windows
  * Add support for running plugins from Python by Kaspar Emanuel
  * Clean up after test suite so multiple runs are successful
  * Add lilv_port_get_node() for using world query functions with ports
  * lv2info: Don't display invalid control maxes and defaults
    (patch from Robin Gareus)
  * lilvmm.hpp: Add wrappers for UI API

 -- David Robillard <d@drobilla.net>  Sat, 04 Jan 2014 16:06:42 -0500

lilv (0.16.0) stable;

  * Add lilv_world_ask() for easily checking if a statement exists
  * Add lilv_world_get() and lilv_port_get() for easily getting one value
  * Add lilv_nodes_merge()
  * Make lilv_plugin_get_port_by_designation() return a const pointer
  * Require a URI for lilv_state_to_string() and fail gracefully otherwise
  * Fail gracefully when lilv_state_new_from_string() is called on NULL
  * Make state loading functions fall back to lv2:default for port values,
    so a plugin description can be loaded as default state
  * Ignore state ports with no value instead of printing an error
  * Support atom:supports in lilv_port_supports_event()
  * Add va_list variant of lilv_plugin_get_num_ports_of_class()